syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManager";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service KeyManagerRegistry {
  rpc cadastrarChave (ChaveRequest) returns (ChaveResponse) {}
}

service KeyManagerDelete {
  rpc removerChave (ClienteChaveRequest) returns (ChaveRemovidaResponse) {}
}

service KeyManagerSearch {
  rpc consultarChave (PixRequest) returns (PixDetalhes) {}
}

service KeyManagerListKeys{
  rpc listagemChaves (ClienteRequest) returns (ListaPix) {}
}

message PixDetalhesLista{
  string pixID = 1;
  string clienteId = 2;
  TipoChave tipoChave = 3;
  string pixValue = 4;
  TipoConta tipoConta = 5;
  google.protobuf.Timestamp createdAt = 6;
}

message ClienteRequest{
  string clienteId = 1;
}

message ListaPix{
  repeated PixDetalhesLista chaves = 1;
}

message PixRequest{
  message FiltroPorPixId{
    string pixId = 1;
    string clienteId = 2;
  }
  oneof filtro{
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message PixDetalhes{

  string pixId = 1;
  string clienteId = 2;
  TipoChave tipoChave = 3;
  string pixValue = 4;
  Titular titular = 5;
  InstituicaoInfo instituicao = 6;
  google.protobuf.Timestamp createdAt = 7;

  message InstituicaoInfo{
    string ispb = 1;
    string agencia = 2;
    string numero = 3;
    TipoConta tipoConta = 4;
  }

}



message Instituicao{
  string nome = 1;
  string agencia = 2;
  string numero = 3;
  TipoConta tipoConta = 4;
}


message Titular{
  string nome = 1;
  string cpf = 2;
}

enum TipoChave{
  ALEATORIO = 0;
  CELULAR = 1;
  CPF = 2;
  EMAIL = 3;
}

enum TipoConta{
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message ChaveRequest {
  string idClient = 1;
  TipoChave tipo = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message ChaveResponse {
  string id = 1;
}

message ClienteChaveRequest{
  string idClient = 1;
  string chave = 2;
}

message ChaveRemovidaResponse{
  string message = 1;
}